--- a/styles/styles-not-found.css
+++ b/styles/styles-not-found.css
@@ -1,105 +1,140 @@
 body {
-    margin: 0;
-    font-family: 'Nunito', sans-serif;
+  margin: 0;
+  font-family: "Nunito", sans-serif;
 }
+
 .header {
-    display: flex;
-    align-items: center;
-    /*Horizontal alignment*/
-    justify-content: space-between;
-    height: 100px;
-    width: 100%;
-    background-color: #331e38;
-    color: white;
-    top: 0px;
+  display: flex;
+  align-items: center;
+  /*Horizontal alignment*/
+  justify-content: space-between;
+  height: 100px;
+  width: 100%;
+  background-color: #331e38;
+  color: white;
+  top: 0px;
 }
+
 .header__img {
-    width: 200px;
+  width: 200px;
 }
+
 .footer {
-    display: flex;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-    background-color: #4c9f70;
+  display: flex;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  background-color: #4c9f70;
 }
+
 .footer a {
-    cursor: pointer;
-    color: white;
-    font-size: 14px;
-    padding-left: 30px;
-    text-decoration: none;
+  cursor: pointer;
+  color: white;
+  font-size: 14px;
+  padding-left: 30px;
+  text-decoration: none;
 }
+
 .footer a:hover {
-    text-decoration: overline;
+  text-decoration: overline;
 }
-@media only screen  and (max-width: 600px) {
-    .login__container {
-        background-color: transparent;
-        border: none;
-        padding: 0px;
-        width: 100%;
-    }
-    .footer {
-        align-items: flex-start;
-        flex-direction: column;
-    }
+
+@media only screen and (max-width: 600px) {
+  .login__container {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
 .not-found {
-    background: linear-gradient(#331e38, #4c9f70);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0px 30px;
-    min-height: calc(100vh - 200px);
+  background: linear-gradient(#331e38, #4c9f70);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px 30px;
+  min-height: calc(100vh - 200px);
 }
+
 .not-found__container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    border: 2px solid white;
-    border-radius: 25px;
-    min-height: calc(70vh - 200px);
-    min-width: calc(100vh);
-    background: rgba(255, 255, 255, 0.1);
-    
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid white;
+  border-radius: 25px;
+  min-height: calc(70vh - 200px);
+  min-width: calc(100vh);
+  background: rgba(255, 255, 255, 0.1);
 }
+
 .not-found__container h1 {
-    color: white;
-    font-size: 150px;
-    margin: 0px;
+  color: white;
+  font-size: 150px;
+  margin: 0px;
 }
+
 .not-found__container p {
-    color: white;
-    font-size: 20px;
-    margin: 0px;
+  color: white;
+  font-size: 20px;
+  margin: 0px;
 }
 
 @keyframes hinge {
-    0% {transform: rotate(0);transform-origin: top left;animation-timing-function: ease-in-out;}
-    20%, 60% {transform: rotate(80deg);transform-origin: top left;animation-timing-function: ease-in-out;}
-    40% {transform: rotate(60deg);transform-origin: top left;animation-timing-function: ease-in-out;}
-    80% {transform: rotate(60deg) translateY(0);transform-origin: top left;animation-timing-function: ease-in-out;}
-    100% {transform: translateY(700px);}
+  0% {
+    transform: rotate(0);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
   }
-  .not-found__container h1 {
-    animation-duration: 10s;
-    animation-fill-mode: both;
-    animation-iteration-count: infinite;
-    margin: 20px;
-    animation-name: hinge;
+  20%, 60% {
+    transform: rotate(80deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
   }
+  40% {
+    transform: rotate(60deg);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  80% {
+    transform: rotate(60deg) translateY(0);
+    transform-origin: top left;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    transform: translateY(700px);
+  }
+}
+.not-found__container h1 {
+  animation-duration: 10s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  margin: 20px;
+  animation-name: hinge;
+}
 
-  @keyframes bounce {
-    0% {transform: scale(1);}
-    50% {transform: scale(1.1);}
-    100% {transform: scale(1);}
+@keyframes bounce {
+  0% {
+    transform: scale(1);
   }
-  .header__img {
-    animation-name: bounce;
-    animation-duration: 2s;
-    animation-fill-mode: both;
-    animation-iteration-count: infinite;
+  50% {
+    transform: scale(1.1);
   }
+  100% {
+    transform: scale(1);
+  }
+}
+.header__img {
+  animation-name: bounce;
+  animation-duration: 2s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+}
+
+/*# sourceMappingURL=styles-not-found.css.map */
